# OpenPlayer

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/fixtures/plugins/subtitle-typography/: manifest.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_info.rs  appearance_store.rs  external_open.rs  lib.rs  macos_mpv_gl_view.m  main.rs  media_paths.rs  mpv_embed.rs  mpv_render.rs  mpv_smoke.rs  native_shortcuts.rs  platform_support.rs  playback.rs  playback_store.rs  plugin_artifacts.rs  shell_preview.rs  storage.rs  system_fonts.rs  window.rs
apps/desktop/src-tauri/src/appearance_store/: commands.rs  database.rs  manifest.rs  mod.rs  package.rs  plugin_settings.rs  preferences.rs  records.rs  state.rs  store.rs  tests.rs  theme_settings.rs  themes.rs  types.rs
apps/desktop/src-tauri/src/appearance_store/manifest/: primitives.rs  runtime.rs  storage.rs  theme.rs
apps/desktop/src-tauri/src/appearance_store/plugin_imports/: import.rs  mod.rs  paths.rs  uninstall.rs
apps/desktop/src-tauri/src/appearance_store/records/: codecs.rs  mod.rs  plugin.rs  preferences.rs  storage.rs  themes.rs  time.rs
apps/desktop/src-tauri/src/appearance_store/runtime/: manifests.rs  mod.rs  sources.rs  storage.rs  views.rs
apps/desktop/src-tauri/src/appearance_store/tests/: fixtures.rs  packages.rs  plugin_actions.rs  plugin_settings.rs  preferences.rs  runtime.rs  theme.rs
apps/desktop/src-tauri/src/appearance_store/types/: defaults.rs  manifest.rs  mod.rs  preferences.rs  runtime.rs  summaries.rs  theme.rs
apps/desktop/src-tauri/src/bootstrap/: embedded.rs  fallback.rs  mod.rs
apps/desktop/src-tauri/src/media_paths/: collect.rs  commands.rs  extensions.rs  sort.rs  startup.rs  tests.rs
apps/desktop/src-tauri/src/mpv_embed/: audio_export.rs  capture_recording.rs  commands.rs  constants.rs  macos_ffi.rs  media.rs  mod.rs  player.rs  player_events.rs  player_normalization.rs  player_resume.rs  player_snapshot.rs  player_tracks.rs  plugin_core.rs  plugin_properties.rs  segment_export.rs  tests.rs  transport_latency.rs  video_host.rs  video_output.rs  wall.rs  wall_hosts.rs  wall_low_latency.rs  wall_normalization.rs  wall_startup.rs  wall_state.rs
apps/desktop/src-tauri/src/mpv_embed/capture_recording/: artifacts.rs  clipboard.rs  directories.rs  formats.rs  mod.rs  paths.rs  recording.rs
apps/desktop/src-tauri/src/mpv_embed/commands/: audio.rs  capture.rs  export.rs  lifecycle.rs  tracks.rs  wall.rs
apps/desktop/src-tauri/src/mpv_embed/media/: command.rs  loadfile.rs  mod.rs  subtitles.rs  validation.rs  visualizer.rs
apps/desktop/src-tauri/src/mpv_embed/rtsp_telemetry/: mod.rs  rtcp.rs  rtp.rs  rtsp.rs  session.rs  state.rs
apps/desktop/src-tauri/src/mpv_embed/tests/: audio_export.rs  capture_recording.rs  media.rs  playback_state.rs  plugin_core.rs  rtsp_telemetry.rs  segment_export.rs  tracks_plugins.rs  transport_latency.rs  video_output.rs  wall.rs
apps/desktop/src-tauri/src/mpv_embed/types/: audio.rs  capture.rs  export.rs  mod.rs  playback.rs  state.rs  video_host.rs  video_output.rs  wall.rs
apps/desktop/src-tauri/src/mpv_embed/video_host/: macos.rs  mod.rs  raw_handle.rs  unix.rs  windows.rs
apps/desktop/src-tauri/src/mpv_embed/video_output/: errors.rs  factory.rs  locale.rs  logging.rs  macos_render.rs  platform.rs
apps/desktop/src-tauri/src/mpv_embed/wall_status/: metrics.rs  mod.rs  osd.rs  (+1 more)
apps/desktop/src-tauri/src/mpv_render/: sys.rs  win32_surface.rs
apps/desktop/src-tauri/src/native_shortcuts/: windows.rs
apps/desktop/src-tauri/src/platform_support/: tests.rs
apps/desktop/src-tauri/src/playback_store/: commands.rs  helpers.rs  history.rs  network_streams.rs  settings.rs  store.rs  tests.rs
apps/desktop/src-tauri/src/plugin_network/: execution.rs  mod.rs  types.rs  validation.rs
apps/desktop/src-tauri/src/system_fonts/: tests.rs
apps/desktop/src-tauri/src/window/: chrome.rs  file_manager.rs  mpv_overlay.rs  overlay.rs  overlay_platform.rs  resize.rs
(+306 files in other folders)
