[package]
name = "openplayer-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "openplayer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["mpv-embed"]
mpv-smoke = ["dep:libmpv2"]
mpv-embed = [
  "dep:libmpv2",
  "dep:libmpv2-sys",
  "dep:objc2",
  "dep:objc2-app-kit",
  "dep:objc2-foundation",
  "dep:raw-window-handle",
  "dep:windows-sys",
]

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-runtime = "2"
libc = "0.2"
libmpv2 = { version = "6.0.0", optional = true, default-features = false }
libmpv2-sys = { version = "4", optional = true }
raw-window-handle = { version = "0.6", optional = true }
arboard = "3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
redb = "4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
], optional = true }

[build-dependencies]
cc = "1"
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", optional = true }
objc2-app-kit = { version = "0.3.2", optional = true, default-features = false, features = [
  "NSResponder",
  "NSView",
] }
objc2-foundation = { version = "0.3.2", optional = true, default-features = false, features = [
  "NSGeometry",
  "objc2-core-foundation",
] }
